# chronos-cpp

./: .gitignore  CMakeLists.txt  build.sh  iso.sh  limine.sh  qemu.sh  remake.sh  run.sh  target-triplet-to-arch.sh
cmake/: toolchain-amd64-clang.cmake
cmake/Platform/: amd64-chronos.cmake
kernel/: CMakeLists.txt
kernel/arch/x86_64/: CMakeLists.txt
kernel/arch/x86_64/include/arch/: atomic.h  private.h  spinlock.h  x86_io.h  x86_msr.h
kernel/arch/x86_64/src/: exception_types.h  exceptions.S  exceptions.cpp  exceptions.h  gdt.S  gdt.cpp  gdt.h  idt.cpp  idt.h  init.cpp
kernel/include/: int.h  log.h  new  platform.h  printf.h  string.h
kernel/platform/pc64/: CMakeLists.txt  limine.cfg  linker.ld
kernel/platform/pc64/src/: boot.cpp  platform.cpp  platform.h
kernel/platform/pc64/src/io/: serial.cpp  serial.h
kernel/platform/pc64/src/time/: cmos.cpp  cmos.h
kernel/src/: init.cpp
kernel/src/c/: printf.cpp  stack_guard.c  string.cpp
kernel/src/debug/: BitmapFonts.cpp  BitmapFonts.h  FramebufferConsole.cpp  FramebufferConsole.h
kernel/src/runtime/: log.cpp
